# razer

./: CMakeLists.txt  razer.conf
librazer/: CMakeLists.txt
razerd/: CMakeLists.txt
scripts/: cmake.global
ui/: razercfg
